[package]
name = "gitclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
rpassword = "6.0.1"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
simple_logger = "2.1.0"
log = "0.4.16"